k8s-atifacts/choreo-connect/choreo-connect-adapter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"choreo-connect-adapter","namespace":"apim-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"choreo-connect-adapter"}},"template":{"metadata":{"annotations":{"consul.hashicorp.com/connect-inject":"true"},"labels":{"app":"choreo-connect-adapter"}},"spec":{"containers":[{"env":[{"name":"ADAPTER_PRIVATE_KEY_PATH","value":"/home/wso2/security/keystore/mg.key"},{"name":"ADAPTER_PUBLIC_CERT_PATH","value": [...]
  creationTimestamp: "2021-06-02T11:45:49Z"
  generation: 1
  name: choreo-connect-adapter
  namespace: apim-demo
  resourceVersion: "65750026"
  uid: e3851a4e-6e59-482d-ade6-86a5284d49ea
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: choreo-connect-adapter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
      creationTimestamp: null
      labels:
        app: choreo-connect-adapter
    spec:
      containers:
      - env:
        - name: ADAPTER_PRIVATE_KEY_PATH
          value: /home/wso2/security/keystore/mg.key
        - name: ADAPTER_PUBLIC_CERT_PATH
          value: /home/wso2/security/keystore/mg.pem
        - name: cp_admin_pwd
          value: admin
        - name: adapter_admin_pwd
          value: admin
        image: wso2/choreo-connect-adapter:0.9.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - check_health.sh
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: choreo-connect-adapter
        ports:
        - containerPort: 18000
          protocol: TCP
        - containerPort: 9843
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - check_health.sh
          failureThreshold: 3
          initialDelaySeconds: 8
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 250Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/wso2/security/keystore
          name: adapter-keystore-vol
        - mountPath: /home/wso2/security/truststore
          name: adapter-truststore-vol
        - mountPath: /home/wso2/security/truststore/consul
          name: consul-certs-vol
        - mountPath: /home/wso2/conf/config.toml
          name: config-toml-vol
          subPath: config.toml
        - mountPath: /home/wso2/conf/log_config.toml
          name: logconfig-toml-vol
          subPath: log_config.toml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: adapter-keystore-vol
        secret:
          defaultMode: 420
          secretName: adapter-keystore
      - name: adapter-truststore-vol
        secret:
          defaultMode: 420
          secretName: adapter-truststore
      - name: consul-certs-vol
        secret:
          defaultMode: 420
          secretName: consul-certs
      - configMap:
          defaultMode: 420
          name: config-toml
        name: config-toml-vol
      - configMap:
          defaultMode: 420
          name: log4j2
        name: log4j2-vol
      - configMap:
          defaultMode: 420
          name: logconfig-toml
        name: logconfig-toml-vol
