k8s-atifacts/choreo-connect/choreo-connect-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"choreo-connect-ingress-internal","namespace":"apim-demo"},"spec":{"rules":[{"host":"internal.wso2.com","http":{"paths":[{"backend":{"service":{"name":"router","port":{"number":9000}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["internal.wso2.com"]}]}}
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2021-06-02T11:45:56Z"
  generation: 1
  name: choreo-connect-ingress-internal
  namespace: apim-demo
  resourceVersion: "65798353"
  uid: a9396834-94a1-411f-a4e8-080283805093
spec:
  rules:
  - host: internal.wso2.com
    http:
      paths:
      - backend:
          service:
            name: router
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - internal.wso2.com
status:
  loadBalancer:
    ingress:
    - ip: 34.123.88.118
