k8s-atifacts/choreo-connect/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"choreo-connect-deployment"},"name":"router","namespace":"apim-demo"},"spec":{"ports":[{"name":"http-routeradmin","port":9000,"protocol":"TCP","targetPort":9000},{"name":"https-router","port":9095,"protocol":"TCP","targetPort":9095}],"selector":{"app":"choreo-connect-deployment"},"type":"ClusterIP"}}
  creationTimestamp: "2021-06-02T11:45:54Z"
  labels:
    app: choreo-connect-deployment
  name: router
  namespace: apim-demo
  resourceVersion: "1216786"
  uid: 78b617c5-24c9-4f92-a4ee-57b8ed41c88c
spec:
  clusterIP: 10.8.5.230
  clusterIPs:
  - 10.8.5.230
  ports:
  - name: http-routeradmin
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: https-router
    port: 9095
    protocol: TCP
    targetPort: 9095
  selector:
    app: choreo-connect-deployment
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
